--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.hero-image{
+  background: url("../../public/images//hero/hero.jpg");
+  background-attachment: fixed;
+  height: 450px;
+}
